--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@randy.tarampi/generic-icon-splash-generate",
+  "name": "@jchoelt/generic-icon-splash-generate",
   "description": "Generate PWA icons and splash screens using sharp",
-  "version": "2.0.4",
+  "version": "3.0.5",
   "author": {
     "name": "Randy Tarampi",
     "email": "rt@randytarampi.ca",
@@ -11,8 +11,7 @@
   "dependencies": {
     "colors": "^1.4.0",
     "mkdirp": "^1.0.4",
-    "sharp": "^0.25.2",
-    "snyk": "^1.316.1"
+    "sharp": "^0.28.0"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^5.0.1",
@@ -70,10 +69,7 @@
     "coveralls": "cat coverage/lcov.info | coveralls",
     "prepublishOnly": "npm shrinkwrap",
     "pretest": "gulp -LLLL --color lint",
-    "test": "NODE_ENV=test gulp -LLLL --color test",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "test": "NODE_ENV=test gulp -LLLL --color test"
   },
-  "sideEffects": false,
-  "snyk": true
+  "sideEffects": false
 }
